add sobre, contato, privacidade

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <div class="app-badge">DC Tech</div>
+    <div class="app-badge">Fut Tech</div>
 
     <div class="container">
       <h1>Sorteio de Times</h1>
@@ -69,6 +69,14 @@
       </div>
     </div>
   </div>
+
+  <div style="margin-top:40px; text-align:center; font-size:0.85rem; color:#9ca3af;">
+    <a href="/index.html" style="color:#5fe891;font-weight: bold;">Início</a> •
+    <a href="/sobre.html" style="color:#22c55e;">Sobre</a> •
+    <a href="/privacidade.html" style="color:#22c55e;">Privacidade</a> •
+    <a href="/contato.html" style="color:#22c55e;">Contato</a>
+  </div>
+
 
   <script src="script.js"></script>
 </body>
